--- a/gobotany/site/templates/partner/_footer.html
+++ b/gobotany/site/templates/partner/_footer.html
@@ -1,38 +1,8 @@
+{% extends "gobotany/_footer.html" %}
 {% load gobotany_tags %}
-        <footer>
-            <img src="/static/images/layout/little-plants.png" alt="">
-            <div class="container">
-                <div class="publisher">
-                    <p class="copyright">All images and text copyright 
-                    &#169; {% include "gobotany/_copyright_years.html" %}
-                    New England Wild Flower Society
-                    or respective copyright holders.
-                    All rights reserved.</p>
-                    <p><a href="http://www.newenglandwild.org/">New England Wild
-                        Flower Society</a><br>
-                    180 Hemenway Road, Framingham, MA 01701</p>
-                </div>
-                <div class="navigation">
-                    <h6>Partner Site Sample
-                        (Go Botany [{% gobotany_version %}])</h6>
-                    <ul id="footer-nav" class="sections">
-                        {% include "partner/_primary_navigation.html" %}
-                    </ul>
-                    <ul class="prime-items">
-                        <li>{% nav_item 'Privacy Policy' site-privacy %}</li>
-                        <li>{% nav_item 'Terms of Use' site-terms-of-use %}</li>
-                        {% comment %}
-                        <li>{% nav_item 'Contact Us' site-contact %}</li>
-                        {% endcomment %}
-                    </ul>
-                </div>
-                <div class="support">
-                    <img src="/static/images/layout/nsf-logo.png"
-                        alt="National Science Foundation" class="nsf-logo">
-                    <p>The Go Botany project is supported in part by the 
-                        National Science Foundation.<br><a
-                            href="http://www.nsf.gov"
-                            >www.nsf.gov</a></p>
-                </div>
-            </div>
-        </footer>
+
+{% block site_name %}Partner Site Sample{% endblock %}
+
+{% block footer_navigation %}
+    {% include "partner/_primary_navigation.html" %}
+{% endblock %}
