Cut some repetition in templates. (#415)

--- a/gobotany/site/templates/gobotany/_script_constants.html
+++ b/gobotany/site/templates/gobotany/_script_constants.html
@@ -1,8 +1,5 @@
+{% include "gobotany/_api_url_js.html" %}
 <script>
-    API_URL = '{% url 'api-base' %}';
-    SEARCH_URL = '{% url 'search' %}';
-    SUGGEST_URL = '{% url 'site-search-suggestions' %}';
-
     /* Get rid of Ember 0.9.8.1 warnings by telling it to go ahead and
        behave like the future. */
 
