--- a/gobotany/taxa/templates/partner/genus.html
+++ b/gobotany/taxa/templates/partner/genus.html
@@ -3,7 +3,7 @@
 {% block title %}Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}{% endblock %}
 
 {% block js_top %}
-    {% include "gobotany/_taxa_js_top.html" %}
+    {% include "gobotany/_api_url_js.html" %}
 {% endblock %}
 
 {% block js_require %}
