Add PlantShare sightings to site search indexes. (#389)

--- a/gobotany/plantshare/templates/sighting.html
+++ b/gobotany/plantshare/templates/sighting.html
@@ -1,7 +1,8 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
 {% load mapping_tags %}
 
-{% block title %}Sighting: {{ sighting.title }}: PlantShare{% endblock %}
+{% block title %}Sighting: {{ sighting.identification }} at
+    {{ sighting.location|capfirst }}: PlantShare{% endblock %}
 
 {% block body_attributes %}id="sighting"
     class="plantshare sighting"{% endblock %}
