--- a/gobotany/search/templates/search.html
+++ b/gobotany/search/templates/search.html
@@ -77,7 +77,7 @@
                                 {# TODO: consider changing icon #}
                                 <img
                                     src="/static/images/icons/icon-groups-list.png"
-                                    alt="" title="PlantShare Sighting">
+                                    alt="" title="PlantShare sighting">
                             {% endif %}
                             {{ result.title|quick_highlight:query|safe }}
                             </a>
