Fixes for Django 1.5

--- a/gobotany/plantshare/templates/checklists.html
+++ b/gobotany/plantshare/templates/checklists.html
@@ -19,7 +19,7 @@
         <li>Share checklists with friends, students, and colleagues.</li>
         <li>To start a new list, click the "Create new list" button</li>
     </li>
-    <a class="ps-button" href="{% url ps-checklist-new %}">Create New Checklist</a>
+    <a class="ps-button" href="{% url 'ps-checklist-new' %}">Create New Checklist</a>
 </div>
 <div class="ps-section">
     <h2 class="left">Checklists</h2>
