--- a/gobotany/plantshare/templates/_ask_botanist_section.html
+++ b/gobotany/plantshare/templates/_ask_botanist_section.html
@@ -6,7 +6,7 @@ for seeing plants, and provide you with expert scientific guidance on all
 things in the New England plant kingdom. Registered users can ask questions,
 all visitors can see the answers.
 {% if not user.is_authenticated %}
-<a href="{% url ps-main %}">Log in</a> to ask a question.
+<a href="{% url 'ps-main' %}">Log in</a> to ask a question.
 {% endif %}
 </p>
 
