--- a/gobotany/plantshare/templates/checklists.html
+++ b/gobotany/plantshare/templates/checklists.html
@@ -23,33 +23,37 @@
 </div>
 <div class="ps-section">
     <h2 class="left">Checklists</h2>
-    {% if all_checklists %}
+    {% if checklists %}
     <table id="checklists-view" class="checklists-list">
         <thead>
             <tr>
                 <th class="first"></th>
                 <th class="checklistview-name">Name<span></span></th>
-                <th class="date">Date</th>
+                <th class="date">Date Found</th>
                 <th class="owner">Owner</th>
                 <th class="last"></th>
             </tr>
         </thead>
         <tbody>
-            {% for checklist in all_checklists %}
+            {% for checklist in checklists %}
             <tr>
                 <td class="first"><input type="checkbox" /></td>
                 <td class="checklistview-name">{{ checklist.name }}</td>
-                <td class="date">???</td>
+                <td class="date">{{ checklist.date_found|default:"N/A" }}</td>
+                {% ifequal user.username checklist.owner.name %}
+                <td class="owner">Me</td>
+                {% else %}
                 <td class="owner">{{ checklist.owner.name }}</td>
-                <td class="last"><a href="ps-checklistdetail.php">View List</a></td>
+                {% endifequal %}
+                <td class="last"><a href="{% url 'ps-checklist' checklist.pk %}">View List</a></td>
             </tr>
             {% endfor %}
         </tbody>
     </table><!-- /.checklists-list -->
     <div class="form-actions small-margin-top">
-        <a class="ps-button" href="modals/checklist-sharing.html" rel="shadowbox;height=440;width=750;" class="share-btn inactive btn">Share</a>
-        <a class="ps-button" href="#" class="export-btn inactive btn">Export</a>
-        <a class="ps-button" href="modals/delete-confirm.html" rel="shadowbox;width=600;height=180;" class="delete-btn inactive btn">Delete</a>
+        <a class="ps-button" href="javascript:alert('Coming soon!');" rel="shadowbox;height=440;width=750;" class="share-btn inactive btn">Share</a>
+        <a class="ps-button" href="javascript:alert('Coming soon!');" class="export-btn inactive btn">Export</a>
+        <a class="ps-button" href="javascript:alert('Coming soon!');" rel="shadowbox;width=600;height=180;" class="delete-btn inactive btn">Delete</a>
     </div><!-- /.form-actions -->
     {% else %}
         <span>You currently have no checklists</span>
