Add latest Teaching Tools document from EF.
Common Core English Language Standards for Science, Grades 6-12

--- a/gobotany/plantshare/templates/manage_sightings.html
+++ b/gobotany/plantshare/templates/manage_sightings.html
@@ -7,6 +7,13 @@
 {% block main_content %}
 <h1>Manage Sightings</h1>
 
+<p>Sightings posted by you, <b>{{ user_name }}</b>:</p>
+<ul>
+{% for sighting in sightings %}
+    <li>{{ sighting }}</li>
+{% endfor %}
+</ul>
+
 {% endblock %}
 
 {% block sidebar_content %}
