--- a/gobotany/site/templates/gobotany/teaching.html
+++ b/gobotany/site/templates/gobotany/teaching.html
@@ -33,6 +33,24 @@
     <li>
     <p class="new">New</p>
     <h3><a
+        href="/static/docs/Common-Core-ELS-for-Science-GoBotany.pdf"
+        >Common Core English Language Standards for Science:
+        Grades 6-8; 9-10; 11-12</a></h3>
+    <p class="meta">PDF, 377 kB. Posted April 2013</p>
+    <p>
+    James Sirch of the <a href="http://peabody.yale.edu/">Yale Peabody
+        Museum of Natural History</a> in New Haven,
+    Connecticut, provides a useful overview of how Go Botany can help teachers
+    and students meet new national standards for English Language Arts
+    Literacy (also see
+    <a href="http://www.corestandards.org/ELA-Literacy">corestandards.org/ELA-Literacy</a>
+    for more information).
+    </p>
+    </li>
+
+    <li>
+    <p class="new">New</p>
+    <h3><a
         href="/static/docs/Go-Botany-Quiz-Cards.pdf"
         >Go Botany Plant Quiz Cards</a></h3>
     <p class="meta">PDF, 1.7 MB. Posted March 2013</p>
