Add ability to set default literature sources when editing character values.

--- a/gobotany/editor/templates/gobotany/edit_pile_character.html
+++ b/gobotany/editor/templates/gobotany/edit_pile_character.html
@@ -49,6 +49,10 @@
   <span class="save-button">SAVE CHANGES</span>
 </p>
 
+<div class="default-literature-source">
+  <label>Character Default Literature Source:</label> <input class="default-lit-source" />
+</div>
+
 <div class="pile-character-grid">
 </div>
 
