Use the label 'Your' in PlantShare page titles.
This follows the recommendation to use 'Your' for social sites, from:
http://developer.yahoo.com/ypatterns/social/core/yourvmy.html (#440)

--- a/gobotany/plantshare/templates/_plantshare_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_navigation.html
@@ -6,7 +6,7 @@
 
             {% if user.is_authenticated %}
                 <li class="post-sighting">{% nav_item 'Post a Sighting' ps-new-sighting %}</li>
-                <li class="manage-sightings">{% nav_item 'Manage Sightings' ps-manage-sightings %}</li>
+                <li class="manage-sightings">{% nav_item 'Manage Your Sightings' ps-manage-sightings %}</li>
             {% endif %}
             
             <li class="sightings-locator">{% nav_item 'Sightings Locator' ps-sightings-locator %}</li>
@@ -14,7 +14,7 @@
             <li class="ask">{% nav_item 'Ask the Botanist' ps-questions %}</li>
             
             {% if user.is_authenticated %}
-                <li class="profile">{% nav_item 'My Profile' ps-profile %}</li>
+                <li class="profile">{% nav_item 'Your Profile' ps-profile %}</li>
                 <li class="logout">{% nav_item 'Log Out' auth_logout %}</li>
             {% else %}
                 {% comment %}
