--- a/gobotany/plantshare/templates/manage_sightings.html
+++ b/gobotany/plantshare/templates/manage_sightings.html
@@ -1,11 +1,11 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
 
-{% block title %}Manage Sightings: PlantShare{% endblock %}
+{% block title %}Manage Your Sightings: PlantShare{% endblock %}
 
 {% block body_attributes %}id="manage-sightings" class="plantshare"{% endblock %}
 
 {% block main_content %}
-<h1>Manage Sightings</h1>
+<h1>Manage Your Sightings</h1>
 
 <p>Sightings posted by you, <b>{{ user_name }}</b>:</p>
 <ul>
