--- a/gobotany/plantshare/templates/profile.html
+++ b/gobotany/plantshare/templates/profile.html
@@ -1,13 +1,13 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
 
-{% block title %}My Profile: PlantShare{% endblock %}
+{% block title %}Your Profile: PlantShare{% endblock %}
 
 {% block body_attributes %}id="profile" class="plantshare"{% endblock %}
 
 {% block main_content %}
-<h1>My Profile</h1>
+<h1>Your Profile</h1>
 
-<h2>My Info</h2>
+<h2>Information</h2>
 
 <div class="section-container">
   {% include "_image_upload_form.html" with image_form=avatar_form %}
@@ -94,7 +94,7 @@
       </div>
     </section>
   
-    <h2>My Location</h2>
+    <h2>Location</h2>
   
     <section class="location-section">
       <div class="info box">
