--- a/gobotany/plantshare/templates/registration/logout.html
+++ b/gobotany/plantshare/templates/registration/logout.html
@@ -4,6 +4,10 @@
 
 {% block body_attributes %}id="logged-out" class="plantshare"{% endblock %}
 
+{% block js_require %}
+    require(['plantshare/registration_complete']);
+{% endblock %}
+
 {% block main_content %}
 <h1>Logged Out</h1>
 
